# rigor

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
configs/: humaneval_codegen.yaml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/compare/: page.tsx
dashboard/app/runs/[id]/: CIBar.tsx  MetricsChart.tsx  page.tsx
dashboard/components/: Nav.tsx
dashboard/lib/: api.ts
data/: first_smoke_results.txt
rigor/: __init__.py  cli.py
rigor/api/: main.py  schemas.py
rigor/api/routes/: datasets.py  health.py  models.py  prompts.py  runs.py
rigor/core/: background.py  config.py  queries.py  runner.py
rigor/datasets/: loaders.py
rigor/db/: models.py  session.py
rigor/metrics/: __init__.py  base.py  registry.py
rigor/metrics/builtin/: __init__.py  exact_match.py  pass_at_1.py
rigor/models/: litellm_adapter.py
rigor/stats/: __init__.py  bootstrap.py  significance.py
scripts/: run_eval.py  seed_dev.py  smoke_litellm.py  smoke_test.sh
tests/: test_api.py  test_bootstrap.py  test_metrics.py  test_pass_at_1.py  test_runner.py  test_significance.py
