[project]
name = "rigor"
version = "0.1.0"
description = "LLM evaluation and regression platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "litellm>=1.52",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[project.scripts]
rigor = "rigor.cli:app"
